--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,7 @@ section {
 
 .about-pic {
   border-radius: 2rem;
+  object-fit: cover;
 }
 
 .arrow {
